# corner_detection_tool

./: CMakeLists.txt  README.md  a.txt  b.txt  c.txt  d.txt  main.cpp  reader.cpp  reader.hpp
